@@ -235,7 +235,7 @@
 #define PACKAGE_NAME "OpenBSM"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "OpenBSM 1.2alpha2"
+#define PACKAGE_STRING "OpenBSM 1.2-alpha3"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "openbsm"
@@ -244,7 +244,7 @@
 #define PACKAGE_URL ""
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "1.2alpha2"
+#define PACKAGE_VERSION "1.2-alpha3"
 
 /* Define as the return type of signal handlers (`int' or `void'). */
 #define RETSIGTYPE void
@@ -280,7 +280,7 @@
 #define USE_SYS_ENDIAN_H /**/
 
 /* Version number of package */
-#define VERSION "1.2alpha2"
+#define VERSION "1.2-alpha3"
 
 /* Define to 1 if `lex' declares `yytext' as a `char *' by default, not a
    `char[]'. */
